--- a/TroTot_Admin/Properties/launchSettings.json
+++ b/TroTot_Admin/Properties/launchSettings.json
@@ -11,8 +11,8 @@
     "TroTot_Admin": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5008",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:3000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
