--- a/TroTot_Admin/appsettings.json
+++ b/TroTot_Admin/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=(localdb)\\MSSQLLocalDB;Uid=sa;Pwd=123456;Database=TroTot;MultipleActiveResultSets=True"
+  }
 }
