[Fix] Connect to database

--- a/TroTot_Admin/appsettings.json
+++ b/TroTot_Admin/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=(localdb)\\MSSQLLocalDB;Uid=sa;Pwd=123456;Database=TroTot;MultipleActiveResultSets=True"
+    "DbConnection": "Server=(local);Uid=sa;Pwd=123456;Database=TroTot"
   }
 }
