--- a/TroTot_Admin/appsettings.json
+++ b/TroTot_Admin/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=(local);Uid=sa;Pwd=123456;Database=TroTot"
+    "DbConnection": "Server=localhost;Uid=sa;Pwd=123456;Database=TroTot;Trusted_Connection=True;Connection Timeout=100000"
   }
 }
